{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 44,
  "lineage": "65f672c8-47f1-f49d-25d6-7bc7d29cc391",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:loadbalancer/app/tf-ecs/0223a42a3a2cb5e8",
            "arn_suffix": "app/tf-ecs/0223a42a3a2cb5e8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-ecs-841982266.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:loadbalancer/app/tf-ecs/0223a42a3a2cb5e8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5a1ca4b165c3a79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cb43204c2c59c6d"
              },
              {
                "subnet_id": "subnet-06d62db86dc7e83f4"
              }
            ],
            "subnets": [
              "subnet-04cb43204c2c59c6d",
              "subnet-06d62db86dc7e83f4"
            ],
            "vpc_id": "vpc-0d8882a0ade9eafe1",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:listener/app/tf-ecs/0223a42a3a2cb5e8/6330d3b1e47ec947",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:targetgroup/tech-challenge-app/dfed33f2483fc35a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:listener/app/tf-ecs/0223a42a3a2cb5e8/6330d3b1e47ec947",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:loadbalancer/app/tf-ecs/0223a42a3a2cb5e8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:targetgroup/tech-challenge-app/dfed33f2483fc35a",
            "arn_suffix": "targetgroup/tech-challenge-app/dfed33f2483fc35a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/healthcheck/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:780771167992:targetgroup/tech-challenge-app/dfed33f2483fc35a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tech-challenge-app",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0316b19a4d10ccedd",
            "association_id": "eipassoc-090cf74baa6ede5d7",
            "domain": "vpc",
            "id": "eipalloc-0316b19a4d10ccedd",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0c8a4f75e11a4f11e",
            "private_dns": "ip-10-1-0-82.ap-southeast-2.compute.internal",
            "private_ip": "10.1.0.82",
            "public_dns": "ec2-3-105-196-225.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.196.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:internet-gateway/igw-078e73ce32c648a61",
            "id": "igw-078e73ce32c648a61",
            "owner_id": "780771167992",
            "tags": {
              "Name": "tech-challange-igw"
            },
            "tags_all": {
              "Name": "tech-challange-igw"
            },
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0316b19a4d10ccedd",
            "connectivity_type": "public",
            "id": "nat-0a6079f5aadeb4804",
            "network_interface_id": "eni-0c8a4f75e11a4f11e",
            "private_ip": "10.1.0.82",
            "public_ip": "3.105.196.225",
            "subnet_id": "subnet-06d62db86dc7e83f4",
            "tags": {
              "Name": "tech-challange/nat-gw/1"
            },
            "tags_all": {
              "Name": "tech-challange/nat-gw/1"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078e73ce32c648a61",
            "id": "r-rtb-0386ecf796cde07c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0386ecf796cde07c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:route-table/rtb-01b5279bfdb92dd57",
            "id": "rtb-01b5279bfdb92dd57",
            "owner_id": "780771167992",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6079f5aadeb4804",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:route-table/rtb-06d8293e92e2fdb80",
            "id": "rtb-06d8293e92e2fdb80",
            "owner_id": "780771167992",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6079f5aadeb4804",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fca67dd2c06a2c5",
            "route_table_id": "rtb-01b5279bfdb92dd57",
            "subnet_id": "subnet-04a761c7d3f850b8d"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-egress",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0337aa7d75b383946",
            "route_table_id": "rtb-06d8293e92e2fdb80",
            "subnet_id": "subnet-0f7d82e99028c3a93"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-egress",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:security-group/sg-0c5a1ca4b165c3a79",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5a1ca4b165c3a79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tech-challenge-app-alb",
            "name_prefix": "",
            "owner_id": "780771167992",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:security-group/sg-043a7df693b8fac03",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043a7df693b8fac03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5a1ca4b165c3a79"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "tf-ecs-tasks",
            "name_prefix": "",
            "owner_id": "780771167992",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:security-group/sg-0af0cd83ded8973c4",
            "description": "allow inbound db access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af0cd83ded8973c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043a7df693b8fac03"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tf-ecs-rds",
            "name_prefix": "",
            "owner_id": "780771167992",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:subnet/subnet-04a761c7d3f850b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a761c7d3f850b8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780771167992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-challenge/private-subnet/1"
            },
            "tags_all": {
              "Name": "tech-challenge/private-subnet/1"
            },
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:subnet/subnet-0f7d82e99028c3a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7d82e99028c3a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780771167992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-challenge/private-subnet/2"
            },
            "tags_all": {
              "Name": "tech-challenge/private-subnet/2"
            },
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:subnet/subnet-06d62db86dc7e83f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.0.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d62db86dc7e83f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780771167992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-challenge/public-subnet/1"
            },
            "tags_all": {
              "Name": "tech-challenge/public-subnet/1"
            },
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:subnet/subnet-04cb43204c2c59c6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.0.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb43204c2c59c6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780771167992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-challenge/public-subnet/2"
            },
            "tags_all": {
              "Name": "tech-challenge/public-subnet/2"
            },
            "vpc_id": "vpc-0d8882a0ade9eafe1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:780771167992:vpc/vpc-0d8882a0ade9eafe1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-00318a3b04dd5091d",
            "default_route_table_id": "rtb-0386ecf796cde07c3",
            "default_security_group_id": "sg-0becb40472b30d082",
            "dhcp_options_id": "dopt-0ea2fcb19c779051a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d8882a0ade9eafe1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0386ecf796cde07c3",
            "owner_id": "780771167992",
            "tags": {
              "Name": "devops-tech-challenge-vpc"
            },
            "tags_all": {
              "Name": "devops-tech-challenge-vpc"
            }
          }
        }
      ]
    }
  ]
}